--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,17 +1,20 @@
+.text-center {
+  text-align: center;
+}
+@media (min-width: 768px) {
+  .navigation {
+    float: right;
+    position: relative;
+    left: -50%;
+    text-align: left;
+  }
+  .navigation .child {
+    position: relative;
+    left: 50%;
+  }
+}
 body {
   padding: 0;
-}
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
