--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,20 +1,11 @@
+@import "helpers.less";
+@import "navbar.less";
+
 body {
   padding: 0;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
-}
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
