--- a/app/styles/navbar.less
+++ b/app/styles/navbar.less
@@ -14,9 +14,28 @@
 .navigation{
 	.navbar-nav{
 		li>a{
-			.font(16,@brown);
+			.font(18,@brown);
 			font-weight: bold;
 		}
 		vertical-align: middle;
 	}
 }
+.header{
+	.header-logo {
+		padding-left: 15px;
+		padding-right: 15px;
+	}
+	.header-image {
+		max-height: 200px;
+	}
+	.header-caption{
+		line-height: 100%;
+		.font(50, @brown);
+	}
+	.header-logo {
+		margin-bottom: 30px;
+		padding-top: 50px;
+		padding-bottom: 20px;
+	}
+}
+
