--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,3 @@
-.text-center {
-  text-align: center;
-}
 @media (min-width: 768px) {
   .navigation {
     float: right;
@@ -26,9 +23,27 @@
 }
 .navigation .navbar-nav li > a {
   font-family: 'Champagne & Limousines';
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   color: #70533a;
   font-weight: bold;
+}
+.header .header-logo {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.header .header-image {
+  max-height: 200px;
+}
+.header .header-caption {
+  line-height: 100%;
+  font-family: 'Champagne & Limousines';
+  font-size: 5rem;
+  color: #70533a;
+}
+.header .header-logo {
+  margin-bottom: 30px;
+  padding-top: 50px;
+  padding-bottom: 20px;
 }
 @font-face {
   font-family: 'Champagne & Limousines';
@@ -47,6 +62,9 @@ html {
 }
 body {
   padding: 0;
+  font-family: 'Champagne & Limousines';
+  font-size: 1.4rem;
+  color: #000000;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
