--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,3 +1,40 @@
+<div class="header" id="head">
+  <div class="header-logo">
+    <img src="/images/logo.png" alt="Your Paw Pals" class="img-responsive header-image center-block">
+    <div class="header-caption text-center">
+      Your pet's happiness is our priority
+    </div>
+  </div>
+  <div class="navbar navbar-default" role="navigation" sticky>
+    <div class="container">
+      <div class="navbar-header">
+
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <div class="collapse navbar-collapse navigation" id="js-navbar-collapse" >
+        <ul class="nav navbar-nav">
+          <li><a href="#philosophy">Our Philosophy</a></li>
+          <li class="navigation-separator"></li>
+          <li><a href="#services">Services</a></li>
+          <li class="navigation-separator"></li>
+          <li><a href="#why">Why Hire Us?</a></li>
+          <li class="navigation-separator"></li>
+          <li><a href="#team">Meet Our Team</a></li>
+          <li class="navigation-separator"></li>
+          <li><a href="#testimonials">Testimonials</a></li>
+          <li class="navigation-separator"></li>
+          <li><a href="#contactus">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="jumbotron">
   <h1>'Allo, 'Allo!</h1>
   <p class="lead">
