Add more content; Fix sticky body padding

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -45,6 +45,9 @@
   padding-top: 50px;
   padding-bottom: 20px;
 }
+.body-sticky {
+  padding-top: 50px;
+}
 @font-face {
   font-family: 'Champagne & Limousines';
   font-style: normal;
