--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
       Your pet's happiness is our priority
     </div>
   </div>
-  <div class="navbar navbar-default" role="navigation" sticky>
+  <div class="navbar navbar-default" role="navigation" sticky body-class="body-sticky">
     <div class="container">
       <div class="navbar-header">
 
@@ -35,26 +35,33 @@
     </div>
   </div>
 </div>
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+<div class="jumbotron" id="philosophy">
+  <div class="container">
+    <h1>Our Philosophy</h1>
+    <div class="text-center">
+      <p>Simply put, we love pets.</p>
+      <p>We believe that every pet deserve the best company and treatment even when their loved owners are far away for work or vacation.</p>
+    </div>
+  </div>
 </div>
+<div class="jumbotron" id="services">
+  <div class="container">
+    <h1>Our Services</h1>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  </div>
+</div>
+<div class="jumbotron" id="why">
+  <div class="container">
+    <h1>Why hire us?</h1>
+    <div>
+      <div class="row">
+        <div class="col-lg-3">
+          
+        </div>
+        <div class="col-lg-9">
+          <h2>Professional and personalised treatment for your pet</h2>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
