Scaffold the main page

--- a/app/styles/helpers.less
+++ b/app/styles/helpers.less
@@ -5,6 +5,8 @@
 @light-grey   : #efefef;
 @dark-grey    : #e1e1e1;
 @brown		  : #70533A;
+@light-brown  : #E7DDD1;
+@green        : #65ADA9;
 
 .position-center(@params){
 	float: right;
