--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -16,6 +16,13 @@
   src: url('/fonts/Champagne & Limousines Bold.woff') format('woff'),
        url('/fonts/Champagne & Limousines Bold.ttf') format('truetype');
 }
+@font-face {
+  font-family: 'Peterbuilt';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/fonts/Peterbuilt.ttf') format('truetype');
+}
+
 html{
   font-size: 62.5%;
 }
@@ -31,14 +38,6 @@ body {
   line-height: 40px;
   padding-bottom: 19px;
 }
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
 .container-narrow > hr {
   margin: 30px 0;
 }
