--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -48,6 +48,84 @@
 .body-sticky {
   padding-top: 50px;
 }
+.jumbotron {
+  margin-bottom: 0;
+}
+.jumbotron h1 {
+  font-family: 'Peterbuilt';
+  font-size: 10rem;
+  color: null;
+}
+.jumbotron p {
+  font-family: 'Champagne & Limousines';
+  font-size: 3rem;
+  color: #ffffff;
+}
+#philosophy {
+  background-color: #65ada9;
+}
+#philosophy h1 {
+  color: #ffffff;
+}
+#why {
+  background-color: #e7ddd1;
+  color: #65ada9;
+}
+#team {
+  background-color: #ffffff;
+}
+.footer {
+  background-color: #333333;
+  color: #e1e1e1;
+}
+.separator {
+  height: 100px;
+}
+.separator .separator-0 {
+  pointer-events: none;
+  background-color: #65ada9;
+}
+.separator .separator-0 path {
+  fill: #ffffff;
+  stroke: #ffffff;
+  stroke-width: 2;
+}
+.separator .separator-1 {
+  pointer-events: none;
+  background-color: #efefef;
+}
+.separator .separator-1 path {
+  fill: #65ada9;
+  stroke: #65ada9;
+  stroke-width: 2;
+}
+.separator .separator-2 {
+  pointer-events: none;
+  background-color: #e7ddd1;
+}
+.separator .separator-2 path {
+  fill: #efefef;
+  stroke: #efefef;
+  stroke-width: 2;
+}
+.separator .separator-3 {
+  pointer-events: none;
+  background-color: #ffffff;
+}
+.separator .separator-3 path {
+  fill: #e7ddd1;
+  stroke: #e7ddd1;
+  stroke-width: 2;
+}
+.separator .separator-4 {
+  pointer-events: none;
+  background-color: #333333;
+}
+.separator .separator-4 path {
+  fill: #ffffff;
+  stroke: #ffffff;
+  stroke-width: 2;
+}
 @font-face {
   font-family: 'Champagne & Limousines';
   font-style: normal;
@@ -59,6 +137,12 @@
   font-style: normal;
   font-weight: bold;
   src: url('/fonts/Champagne & Limousines Bold.woff') format('woff'), url('/fonts/Champagne & Limousines Bold.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'Peterbuilt';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/fonts/Peterbuilt.ttf') format('truetype');
 }
 html {
   font-size: 62.5%;
@@ -75,12 +159,6 @@ body {
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
-}
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
 }
 .container-narrow > hr {
   margin: 30px 0;
