--- a/app/views/main.html
+++ b/app/views/main.html
@@ -35,6 +35,11 @@
     </div>
   </div>
 </div>
+<div class="separator">
+  <svg class="separator-0" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z" />
+  </svg>
+</div>
 <div class="jumbotron" id="philosophy">
   <div class="container">
     <h1>Our Philosophy</h1>
@@ -44,11 +49,21 @@
     </div>
   </div>
 </div>
+<div class="separator">
+  <svg class="separator-1" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z" />
+  </svg>
+</div>
 <div class="jumbotron" id="services">
   <div class="container">
     <h1>Our Services</h1>
 
   </div>
+</div>
+<div class="separator">
+  <svg class="separator-2" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z" />
+  </svg>
 </div>
 <div class="jumbotron" id="why">
   <div class="container">
@@ -63,5 +78,27 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+<div class="separator">
+  <svg class="separator-3" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z" />
+  </svg>
+</div>
+<div class="jumbotron" id="team">
+  <div class="container">
+    <h1>Our Team</h1>
+
+  </div>
+</div>
+<div class="separator">
+  <svg class="separator-4" xmlns="http://www.w3.org/2000/svg" version="1.1" width="100%" height="100" viewBox="0 0 100 102" preserveAspectRatio="none">
+    <path d="M0 0 L50 100 L100 0 Z" />
+  </svg>
+</div>
+<div class="footer" id="contactus">
+  <div class="container">
+    <h1>Contact Us</h1>
+
   </div>
 </div>
