--- a/app/views/main.html
+++ b/app/views/main.html
@@ -19,17 +19,17 @@
 
       <div class="collapse navbar-collapse navigation" id="js-navbar-collapse" >
         <ul class="nav navbar-nav">
-          <li><a href="#philosophy">Our Philosophy</a></li>
+          <li><a href="#/#philosophy">Our Philosophy</a></li>
           <li class="navigation-separator"></li>
-          <li><a href="#services">Services</a></li>
+          <li><a href="#/#services">Services</a></li>
           <li class="navigation-separator"></li>
-          <li><a href="#why">Why Hire Us?</a></li>
+          <li><a href="#/#why">Why Hire Us?</a></li>
           <li class="navigation-separator"></li>
-          <li><a href="#team">Meet Our Team</a></li>
+          <li><a href="#/#team">Meet Our Team</a></li>
           <li class="navigation-separator"></li>
-          <li><a href="#testimonials">Testimonials</a></li>
+          <li><a href="#/#testimonials">Testimonials</a></li>
           <li class="navigation-separator"></li>
-          <li><a href="#contactus">Contact Us</a></li>
+          <li><a href="#/#contactus">Contact Us</a></li>
         </ul>
       </div>
     </div>
@@ -56,8 +56,25 @@
 </div>
 <div class="jumbotron" id="services">
   <div class="container">
-    <h1>Our Services</h1>
-
+    <h1 class="text-right">Our Services</h1>
+    <div class="row">
+      <div class="col-lg-4 dog-walking">
+        <img src="/images/dog-walker.png" alt="Dog Walking" class="img-responsive">
+        <div class="text-center services-content">
+          Dog Walking
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="text-center services-content">
+          Pet Sitting
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div class="text-center services-content">
+          House Sitting
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="separator">
@@ -67,15 +84,19 @@
 </div>
 <div class="jumbotron" id="why">
   <div class="container">
-    <h1>Why hire us?</h1>
+    <h1 class="text-left">Why hire us?</h1>
     <div>
-      <div class="row">
-        <div class="col-lg-3">
-          
+      <div class="why-content">
+        <div class="why-paw"><img class="img-responsive" src="/images/paw_tosca.png" alt="paw"></div>
+        <div class="why-header">
+          Professional and personalised treatment for your pet
         </div>
-        <div class="col-lg-9">
-          <h2>Professional and personalised treatment for your pet</h2>
-        </div>
+      
+      </div>
+      <div class="why-content">
+        <div class="why-paw"><img class="img-responsive" src="/images/paw_tosca.png" alt="paw"></div>
+        <div class="why-header">Peace of mind for you, where ever you are</div>
+        <div class="why-info">With live updates from our pet sitters, you will know that your pet and home are in good hands.</div>  
       </div>
     </div>
   </div>
@@ -87,8 +108,33 @@
 </div>
 <div class="jumbotron" id="team">
   <div class="container">
-    <h1>Our Team</h1>
-
+    <h1 class="text-right">Our Team</h1>
+    <div class="row">
+      <div class="col-lg-4">
+        <div>
+          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+        </div>
+        <div class="team-name">
+          Cindy Pranata
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div>
+          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+        </div>
+        <div class="team-name">
+          Jennifer Noviana
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <div>
+          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+        </div>
+        <div class="team-name">
+          Cindy Pranata
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="separator">
