--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -48,6 +48,9 @@
 .body-sticky {
   padding-top: 50px;
 }
+.navbar {
+  z-index: 1030;
+}
 .jumbotron {
   margin-bottom: 0;
 }
@@ -55,17 +58,22 @@
   font-family: 'Peterbuilt';
   font-size: 10rem;
   color: null;
+  margin-bottom: 30px;
 }
 .jumbotron p {
   font-family: 'Champagne & Limousines';
-  font-size: 3rem;
+  font-size: 4rem;
   color: #ffffff;
+  margin: 0;
 }
 #philosophy {
   background-color: #65ada9;
 }
 #philosophy h1 {
   color: #ffffff;
+}
+#services h1 {
+  text-align: right;
 }
 #why {
   background-color: #e7ddd1;
@@ -125,6 +133,49 @@
   fill: #ffffff;
   stroke: #ffffff;
   stroke-width: 2;
+}
+.dog-walking {
+  padding-right: 40px;
+}
+.services-content {
+  font-family: 'Champagne & Limousines';
+  font-size: 5rem;
+  color: #70533a;
+  font-weight: 700;
+}
+.why-content {
+  margin-bottom: 10px;
+}
+.why-content .why-paw {
+  height: 50px;
+  width: 50px;
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+.why-content .why-header {
+  display: inline-block;
+  vertical-align: middle;
+  font-family: 'Champagne & Limousines';
+  font-size: 4rem;
+  color: #65ada9;
+  font-weight: bold;
+}
+.why-content .why-info {
+  margin-left: 65px;
+  font-family: 'Champagne & Limousines';
+  font-size: 3rem;
+  color: #65ada9;
+}
+.footer {
+  padding-bottom: 130px;
+}
+.team-name {
+  font-family: 'Champagne & Limousines';
+  font-size: 4rem;
+  color: #000000;
+  text-align: center;
 }
 @font-face {
   font-family: 'Champagne & Limousines';
