Working on the main page

--- a/app/styles/content.less
+++ b/app/styles/content.less
@@ -86,6 +86,9 @@
 	.font(50, @brown);
 	font-weight: 700;
 }
+.services-desc {
+	.font(20);
+}
 .why-content {
 	.why-paw{
 		height: 50px;
@@ -110,7 +113,18 @@
 .footer {
 	padding-bottom: 130px;
 }
+.team-panel {
+	padding-left: 40px;
+	padding-right: 40px;
+}
 .team-name {
 	.font(40);
 	text-align: center;
+}
+.team-avatar {
+	padding-left: 50px;
+	padding-right: 50px;
+}
+.team-details {
+	.font(20);
 }
