--- a/app/views/main.html
+++ b/app/views/main.html
@@ -44,7 +44,7 @@
   <div class="container">
     <h1>Our Philosophy</h1>
     <div class="text-center">
-      <p>Simply put, we love pets.</p>
+      <p>Simply put, we love pets. And we are good at it.</p>
       <p>We believe that every pet deserve the best company and treatment even when their loved owners are far away for work or vacation.</p>
     </div>
   </div>
@@ -63,15 +63,26 @@
         <div class="text-center services-content">
           Dog Walking
         </div>
-      </div>
-      <div class="col-lg-4">
-        <div class="text-center services-content">
-          Pet Sitting
+        <div class="text-center services-desc">
+          Walking the dog is an art. It is essential to the dog's physical and mental health. To rip all of its benefits, the walk has to be done in the proper way. Our team is well-trained to ensure that your dogs are healthy, happy and safe.
         </div>
       </div>
       <div class="col-lg-4">
+        <img src="/images/dog-walker.png" alt="Dog Walking" class="img-responsive">
+        <div class="text-center services-content">
+          Pet Sitting
+        </div>
+        <div class="text-center services-desc">
+          Planning for a day trip? Having an urgent business errand? And No one is at home to take care of your pets? No worries! We will make sure that your pets still get the attention and love.
+        </div>
+      </div>
+      <div class="col-lg-4">
+        <img src="/images/dog-walker.png" alt="Dog Walking" class="img-responsive">
         <div class="text-center services-content">
           House Sitting
+        </div>
+        <div class="text-center services-desc">
+          Don't ever let your pets prevent you from going for a holiday with friends or family. We are here to let you have a peaceful time away from your house. Your pets and house are safe in our hands.
         </div>
       </div>
     </div>
@@ -91,12 +102,12 @@
         <div class="why-header">
           Professional and personalised treatment for your pet
         </div>
-      
+
       </div>
       <div class="why-content">
         <div class="why-paw"><img class="img-responsive" src="/images/paw_tosca.png" alt="paw"></div>
         <div class="why-header">Peace of mind for you, where ever you are</div>
-        <div class="why-info">With live updates from our pet sitters, you will know that your pet and home are in good hands.</div>  
+        <div class="why-info">With live updates from our pet sitters, you will know that your pet and home are in good hands.</div>
       </div>
     </div>
   </div>
@@ -110,28 +121,31 @@
   <div class="container">
     <h1 class="text-right">Our Team</h1>
     <div class="row">
-      <div class="col-lg-4">
-        <div>
-          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+      <div class="col-lg-4 team-panel">
+        <div class="team-avatar">
+          <img src="/images/Blank-Photo.jpg" alt="" class="img-circle img-responsive">
         </div>
         <div class="team-name">
-          Cindy Pranata
+          Cindy
         </div>
       </div>
-      <div class="col-lg-4">
-        <div>
-          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+      <div class="col-lg-4 team-panel">
+        <div class="team-avatar">
+          <img src="/images/Blank-Photo.jpg" alt="" class="img-circle img-responsive">
         </div>
         <div class="team-name">
-          Jennifer Noviana
+          Jennifer
         </div>
       </div>
-      <div class="col-lg-4">
-        <div>
-          <img src="/images/dog-walker.png" alt="" class="img-circle img-responsive">
+      <div class="col-lg-4 team-panel">
+        <div class="team-avatar">
+          <img src="/images/Blank-Photo.jpg" alt="" class="img-circle img-responsive">
         </div>
         <div class="team-name">
-          Cindy Pranata
+          Peter
+        </div>
+        <div class="team-details text-center">
+          I love coding, eating, sleeping, and bulldogs!
         </div>
       </div>
     </div>
