--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -29,6 +29,8 @@ html{
 body {
   padding: 0;
   .font();
+  font-smooth: always;
+  -webkit-font-smoothing: antialiased;
 }
 
 /* Make the masthead heading the same height as the navigation */
